test/corpus/preprocessor_statement.txt
===================
if guarding a declaration (github issue #36)
===================

class BenchmarkTests extends utest.Test {
  #if (sys || nodejs)
  function benchmark(module:IModule2D):Float {
    return 1;
  }
  #end
}

---

(module
  (class_declaration (identifier) (package_name) (type_name)
    (block
      (preprocessor_statement
        (identifier) (operator) (identifier)
        (function_declaration
          (identifier)
          (function_arg (identifier) (type (identifier)))
          (type (identifier))
          (block (integer))
        )
      )
    )
  )
)

===================
if-elseif guarding a var redeclaration per platform
===================

#if flash
var maxNumArgs:Int = 1;
#elseif cpp
var maxNumArgs:Int = 2;
#end

---

(module
  (preprocessor_statement
    (identifier)
    (variable_declaration (identifier) (type (identifier)) (operator) (integer))
    (identifier)
    (variable_declaration (identifier) (type (identifier)) (operator) (integer))
  )
)

===================
nested preprocessor statements
===================

#if flash
#if debug
trace(1);
#end
#end

---

(module
  (preprocessor_statement
    (identifier)
    (preprocessor_statement
      (identifier)
      (call_expression (identifier) (integer))
    )
  )
)

===================
dangling else guarded by a preprocessor conditional
===================

if (cond) {
    a();
}
#if !STANDALONE
else {
    b();
}
#end

---

(module
  (conditional_statement
    (identifier)
    (block
      (call_expression (identifier))))
  (preprocessor_statement
    (operator)
    (identifier)
    (dangling_else_statement
      (block
        (call_expression (identifier))))))

===================
dangling else-if inside a disabled preprocessor branch
===================

#if 0
else if (cond)
{
    enqueue(rawAsset);
}
#end

---

(module
  (preprocessor_statement
    (integer)
    (dangling_else_statement
      (identifier)
      (block
        (call_expression (identifier) (identifier))))))

===================
dangling else with trailing statements in the same guarded branch
===================

if (c) {
    a();
}
#if !STANDALONE
else {
    b();
}
d();
#else
else {
    e();
}
#end

---

(module
  (conditional_statement
    (identifier)
    (block
      (call_expression (identifier))))
  (preprocessor_statement
    (operator)
    (identifier)
    (dangling_else_statement
      (block
        (call_expression (identifier))))
    (call_expression (identifier))
    (dangling_else_statement
      (block
        (call_expression (identifier))))))
